# commodutil

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  azure-build-pipelines.yml  pyproject.toml  rebuilt.bat  requirements-test.txt  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: 1_tests.yml  2_coverage.yml  3_linting.yml  4_release.yml
commodutil/: __init__.py  convfactors.py  dates.py  forwards.py  htmlutil.py  pandasutil.py  priceconv.py  stats.py  transforms.py
commodutil/forward/: calendar.py  continuous.py  fly.py  quarterly.py  spreads.py  util.py
commodutil/standards/: __init__.py  analysis_types.py  commodities.py  commodity_groups.py  currency.py  price_unit.py  price_units.py  regions.py  unit_registry.py  units.py
scripts/: rbw_structure_scan.py
test/: test_conv.py  test_dates.py  test_forwards.py  test_transforms.py  test_weekly.csv
test/forward/: test_calendar.py  test_fly.py  test_forwards_fly.py  test_forwards_quarterly.py  test_quarterly.py  test_spreads.py
tests/: conftest.py  test_aliases.py  test_align_fx_result.py  test_arb.py  test_conv.py  test_dates.py  test_golden_factors.py  test_pandasutils.py  test_price_conv.py  test_price_unit.py  test_priceconv_reexports.py  test_rate_pint.py  test_regex_literals.py  test_standards_analysis_types.py  test_standards_commodities.py  test_standards_commodity_groups.py  test_standards_currency.py  test_standards_price_units.py  test_standards_regions.py  test_standards_units.py  test_stats.py  test_transforms.py  test_unit_registry.py
tests/forward/: conftest.py  test_calendar.py  test_quarterly.py  test_spreads.py
tests/golden/: golden_factors.json
