[build-system]
requires = ["setuptools>=80.9.0", "setuptools-scm>=8.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "commodutil"
dynamic = ["version"]
description = "common commodity/oil analytics utils"
authors = [
    {name = "aeorxc", email = "author@example.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.1",
    "dask[delayed]",
    "pint",
    "python-dateutil",
]

[project.urls]
Homepage = "https://dev.azure.com/RWEST-MFI-TE/Oil/_git/commodutil"
Source = "https://dev.azure.com/RWEST-MFI-TE/Oil/_git/commodutil"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-runner",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["commodutil*"]
exclude = ["tests*", "*.tests*", "tests.*"]
[tool.setuptools_scm]
